tests/transpiler/x/py/record_assign.error
run: exit status 1
Traceback (most recent call last):
  File "/workspace/mochi/tests/transpiler/x/py/record_assign.py", line 14, in <module>
    inc(c)
  File "/workspace/mochi/tests/transpiler/x/py/record_assign.py", line 12, in inc
    c["n"] = c.n + 1
    ~^^^^^
TypeError: 'Counter' object does not support item assignment
