tests/transpiler/x/py/record_assign.py
# Code generated by Mochi transpiler.
# Version 0.10.34, generated on 2025-07-22 10:04 +0700
from __future__ import annotations
from dataclasses import dataclass
from typing import Any, List, Dict

@dataclass
class Counter:
    n: int

def inc(c):
    c["n"] = c.n + 1
c = Counter(n=0)
inc(c)
print(c.n)
